# grz-tools

./: .containerignore  .gitattributes  .release-please-manifest.json  CONTRIBUTING.md  Dockerfile  README.md  environment-dev.yaml  environment-dev.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: build-binary-wheels.yml  check-pr.yml  ci.yml  crates-io.yml  docker.yml  pypi-rust.yml  pypi.yml  release-please.yml
docs/releases/: 2026-05-26.md
resources/: config.yaml
src/grz_cli/: cli.py  download.py  file_operations.py  parser.py  submission.py  transfer.py  upload.py  utils.py  worker.py
src/grz_cli/commands/: clean.py  consent.py  db.py  decrypt.py  download.py  encrypt.py  list_submissions.py  pruefbericht.py  submit.py  upload.py  validate.py
src/grz_cli/models/: config.py
src/grz_cli/models/v1_0_0/: metadata.py
src/grz_cli/models/v1_1_1/: metadata.py
src/grz_cli/operations/: encrypt.py  validate.py
src/grz_cli/utils/: __init__.py  crypt.py
src/grz_cli/validation/: __init__.py  fastq.py
src/grz_cli/workers/: download.py  submission.py  upload.py  worker.py
tests/: conftest.py  test_abort_upload_on_failure.py  test_bam_validation.py  test_c4gh_passphrase_handling.py  test_check_version.py  test_cli.py  test_db.py  test_download.py  test_fastq_validation.py  test_file_operations.py  test_gzip_validation.py  test_parser.py  test_read_multiple_json.py  test_streaming_measure.py  test_streaming_pipeline_comparison.py  test_submission_worker_fastq_validation.py  test_upload.py  test_validation.py  test_version_file.py  test_version_info.py
tests/api/: test_gatekeeper_api.py
tests/cli/: test_archive.py  test_clean.py  test_crypt.py  test_db.py  test_db_context.py  test_dump_config.py  test_list.py  test_process.py  test_process_validation_e2e.py  test_pruefbericht.py  test_report.py  test_upload.py  test_validate.py
tests/mock_files/: example_metadata.json  version.json
tests/mock_files/metadata_validation/: file-path-not-normalized.json  file-path-traversal.json  incompatible-reference-genomes.json  missing-fastq-r2.json  missing-read-order.json  missing-target-regions.json  missing-vcf-file.json
tests/mock_files/submissions/valid_submission/: update_encrypted_files.sh
tests/mock_files/submissions/valid_submission/encrypted_files/: aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.read1.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.read2.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.vcf.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.read1.fastq.gz.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.read2.fastq.gz.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.vcf.c4gh
tests/mock_files/submissions/valid_submission/files/: aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.vcf  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.vcf
tests/mock_files/submissions/valid_submission/metadata/: metadata.json
tests/resources/reads/: valid_HiFi.bam
