[project]
name = "grz-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3-stubs~=1.43.34",
    "grz-check",
    "grz-cli",
    "grz-common",
    "grz-db",
    "grz-pydantic-models",
    "grz-pydantic-models-testing",
    "grzctl",
]

[tool.uv.workspace]
members = [
    "packages/grz-common",
    "packages/grz-cli",
    "packages/grzctl",
    "packages/grz-db",
    "packages/grz-pydantic-models",
    "packages/grz-pydantic-models-testing",
    "packages/grz-check",
]

[tool.uv.sources]
grz-common = { workspace = true }
grz-cli = { workspace = true }
grzctl = { workspace = true }
grz-db = { workspace = true }
grz-pydantic-models = { workspace = true }
grz-pydantic-models-testing = { workspace = true }
grz-check = { workspace = true }

[tool.uv]
# Single source of truth for the uv version. CI reads this via
# `astral-sh/setup-uv` (`version-file: pyproject.toml`), and uv itself
# enforces it on every local invocation. (The constraint-dependencies 
# below as well as conda `environment-dev.yml`pin must be kept in sync 
# by hand.)
required-version = "==0.11.22"

# Centralize test/dev tool version ranges here so each package's
# `[dependency-groups]` only lists bare package names. uv applies these
# constraints workspace-wide during `uv lock` and `uv sync`.
constraint-dependencies = [
    "pytest >=8.3.3,<9",
    "pytest-cov >=5.0.0,<6",
    "pytest-mock >=3.14.0,<4",
    "pytest-sugar >=1.0.0,<2",
    "pytest-postgresql ~=7.0.2",
    "moto[s3] >=5.0.16,<6",
    "responses ==0.25.*",
    "numpy >=2.1.2,<3",
    "ruff >=0.11.12,<1",
    "uv ==0.11.22"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-postgresql",
    "psycopg",
    "moto[s3]",
    "ruff",
    "numpy",
    "responses",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
    "grz-pydantic-models-testing",
    "grz-check",
]

[dependency-groups]
dev = [
    "textual-dev",
    "tox",
    "tox-uv",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-sugar",
    "pytest-postgresql",
    "psycopg",
    "moto[s3]",
    "numpy",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
    "grz-pydantic-models-testing",
    "grz-check",
]
lint = [
    "ruff",
    "types-pyyaml",
    "types-tqdm",
    "types-boto3[s3] >=1.36,<2",
    "pydantic",
    "mypy",
    "packaging",
]

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
    "out"
]
extend-exclude = ["alembic"]

line-length = 120
src = [
    "src",
    "tests"
]
target-version = "py312"

[tool.ruff.lint]
# A list of rule codes that are fixable.
fixable = [
    "F", # Pyflakes
    "UP", # pyupgrade
    "I", # isort
    "D", # pydocstyle
]
# A list of rule codes to ignore.
ignore = [
    "E114", # Indentation is not a multiple of four (comment)
    "E116", # Unexpected indentation (comment)
    "PLW", # Pylint Warning
    "RUF001", # String contains ambiguous unicode character
    "RUF010", # Use explicit string type conversion in f-strings
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "N818", # Exception name should end with `Error`
    "B008", # Do not perform function calls in argument defaults
    "PLR2004", # Magic value used in comparison
    "D200", # One-line docstring should fit on one line with quotes
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D107", # Missing docstring in `__init__`
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "B028"    # No explicit `stacklevel` keyword argument found
]
# A list of rule codes to enable.
select = [
    "C90", # McCabe complexity
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "N", # pep8-naming
    "UP", # pyupgrade
    "PL", # Pylint
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "D", # pydocstyle
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Ignore security warnings, simplification suggestions, and pylint refactoring rules in tests
"packages/*/tests/*" = [
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "PLR", # Pylint Refactor
    "B011", # Do not use `assert False`
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "PLC0415", # `import` should be at the top-level of a file
]
# Ignore security warnings, simplification suggestions, and pylint refactoring rules in tests
"tests/*" = [
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "PLR", # Pylint Refactor
    "B011", # Do not use `assert False`
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "PLC0415", # `import` should be at the top-level of a file
]
# Ignore all pydocstyle rules in `__init__.py` files
"__init__.py" = [
    "D",
]
# Ignore the rule requiring `cls` as the first argument for class methods in generated model files
"packages/grz-cli/src/grz_cli/models/**.py" = [
    "N805"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["format-check", "lints", "typecheck", "3.12", "3.13"]
allowlist_externals = ["pytest", "ruff"]
isolated_build = true

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests"
dependency_groups = ["test"]
# Scope `uv sync` to a single workspace member when GRZ_TOX_PACKAGE is set.
# Default `grz-tools` (the workspace root meta-package) preserves "install everything" for
# local `tox` invocations; CI exports GRZ_TOX_PACKAGE=<pkg> so the per-package matrix only
# installs that package's declared deps + its own `test` group, catching missing-dep
# regressions like transitive-only `import grz_db` from grz-common.
uv_sync_flags = ["--package", "{env:GRZ_TOX_PACKAGE:grz-tools}"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]
# isolate Cargo build directories per tox environment, otherwise Cargo caches the compiled Rust extension (and then we end up with mismatches between ABI versions).
setenv = { UV_REINSTALL_PACKAGE = "grz-check", CARGO_TARGET_DIR = "{work_dir}/cargo_target_{env_name}" }

[tool.tox.env."format-check"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check"]]

[tool.tox.env."lints"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check"]]

[tool.tox.env."typecheck"]
runner = "uv-venv-lock-runner"
skip_install = false
dependency_groups = ["lint"]
commands = [["mypy"]]

[tool.mypy]
python_version = "3.12"
plugins = "pydantic.mypy"
packages = "grz_cli,grzctl,grz_pydantic_models,grz_db,grz_common"

[[tool.mypy.overrides]]
module = "crypt4gh.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
